--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@
     font-family: Arial, sans-serif;
 }
 
+
+
 .login-container {
     background-color: rgba(255, 255, 255, 0.9);
     padding: 20px;
@@ -20,9 +22,9 @@
 }
 
 .input {
-    width: 100%;
+    /* width: 100%; */
     padding: 10px;
-    margin: 10px 0;
+    margin: 10px 0px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
@@ -67,14 +69,6 @@
     text-align: center;
 }
 
-.input {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
 
 .button {
     width: 100%;
@@ -142,5 +136,86 @@ p {
 .button:hover {
     background-color: #0053a0;
 }
+
+body {
+    background-color: #f8f9fa;
+}
+
+.home-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin-top: 50px;
+}
+
+.content {
+    text-align: right;
+    margin-bottom: 20px;
+}
+
+.logout {
+    background-color: #dc3545;
+    color: #fff;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#form {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+}
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card {
+    flex: 0 0 48%;
+    margin-bottom: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 40px;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+#username {
+    font-size: 16px;
+    margin-right: 10px;
+    
+}
+
+#profileImage{
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+
 
 
